--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -139,8 +139,8 @@
 							<h4 class="text-white">{{ user.balance }}</h4>
 						</div>
 						<div class="d-flex justify-content-between pb-10">
-							<h4 class="text-white">BTC</h4>
-							<h4 class="text-white">0.0000000</h4>
+							<h4 class="text-white">Bonus</h4>
+							<h4 class="text-white">{{ user.bonus }}</h4>
 						</div>
 						<div class="d-flex justify-content-between">
 							<a href="{% url 'deposit' %}"><button type="button" class="btn btn-outline btn-danger btn-lg"><i class="fa fa-arrow-circle-down"></i> DEPOSIT</button></a>
