--- a/users/templates/registration/email_create.html
+++ b/users/templates/registration/email_create.html
@@ -5,6 +5,10 @@ We've received a request to create an account for this email.
 
 To activate your account, please navigate to:
 
+<div class="home-single-slide-button">
+    <a href="http://{{ domain }}{% url 'my-auth:activate' uidb64=uid token=token %}" class="btn-style btn-filled">Learn More</a>
+</div>
+
 http://{{ domain }}{% url 'my-auth:activate' uidb64=uid token=token %}
 
 
